# shpy

./: .glic  .pre-commit-config.yaml  README.md  pyproject.toml
shpy/: __init__.py  command.py  shell.py
